@@ -11,11 +11,11 @@ exec wish "$0" "$@"
 # ".tcl" files is this directory, which are sourced by this script
 # as needed.
 #
-# RCS: @(#) $Id: widget,v 1.9 2003/02/19 16:13:15 dkf Exp $
+# RCS: @(#) $Id: widget,v 1.9.2.1 2003/09/25 05:37:48 das Exp $
 
 eval destroy [winfo child .]
 wm title . "Widget Demonstration"
-if {$tcl_platform(platform) eq "unix"} {
+if {[tk windowingsystem] eq "x11"} {
     # This won't work everywhere, but there's no other way in core Tk
     # at the moment to display a coloured icon.
     image create photo TclPowered \
@@ -47,7 +47,7 @@ menu .menuBar -tearoff 0
 menu .menuBar.file -tearoff 0
 
 # On the Mac use the specia .apple menu for the about item
-if {[string equal [tk windowingsystem] "classic"]} {
+if {[tk windowingsystem] eq "classic" || [tk windowingsystem] eq "aqua"} {
     .menuBar add cascade -menu .menuBar.apple
     menu .menuBar.apple -tearoff 0
     .menuBar.apple add command -label "About..." -command "aboutBox"
